--- a/css/index.css
+++ b/css/index.css
@@ -17,9 +17,11 @@ main {
 }
 
 .image-section {
-    background: aqua;
     width: 50%;
     height: 100vh;
+    background: url('/static/VictorKashima-Background.jpg');
+    background-size:cover;
+    background-position:right;
 }
 
 .form-section {
