--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,7 @@ main {
 .image-section {
     width: 50%;
     height: 100vh;
-    background: url('/static/VictorKashima-Background.jpg');
+    background: url('../static/VictorKashima-Background.jpg');
     background-size:cover;
     background-position:right;
 }
