--- a/css/index.css
+++ b/css/index.css
@@ -85,3 +85,34 @@ input:focus {
     color: #FF0000;
     font-size: 1rem;
 }
+
+@media screen and (max-width: 765px) {
+    
+    html {
+        font-size: 12px;
+    }
+
+    main {
+        flex-direction: column;
+    }
+
+    .image-section {
+        width: 100%;
+        height: 500px;
+    }
+    
+    .form-section {
+        width: 100%;
+        height: auto;
+        padding: 5rem 0;
+    }
+
+    form {
+        width: 80%;
+    }
+    
+    label {
+        gap: .5rem;
+    }
+
+}
